--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Blog Vacanza</title>
 </head>
 <body>
+
     <!-- Titolo e sfondo notturno -->
     <header>
         <h1>Il mio Viaggio a Londra</h1>
@@ -15,7 +16,9 @@
         <img src="./img/pexels-bill-emrich-230794-2.jpg" alt="Londra-Scenario notturno">
         <hr>
     </header>
+    
     <main>
+
         <!-- Sezione Spese -->
         <section>
             <h2>Le mie spese</h2>
@@ -48,6 +51,19 @@
             </table>  
             <hr>
         </section>
+
+        <!-- Sezione Cose da fare -->
+        <section>
+            <h3>Cose da fare</h3>
+            <ul>
+                <li>Visitare la Tower of London &#10008;</li>
+                <li>Visitare greenwich &#10004;</li>
+                <li>Ascoltare un artista di strada a Covent Garden &#10004;</li>
+                <li>Mangiare il tipico Fish and Chips inglese &#10008;</li>
+            </ul>
+            <hr>
+        </section>
+
 
     </main>
 
