--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blog Vacanza</title>
 </head>
-<body>
 
+<body>
     <!-- Titolo e sfondo notturno -->
     <header>
         <h1>Il mio Viaggio a Londra</h1>
@@ -18,7 +18,6 @@
     </header>
     
     <main>
-
         <!-- Sezione Spese -->
         <section>
             <h2>Le mie spese</h2>
@@ -64,7 +63,35 @@
             <hr>
         </section>
 
-
+        <!-- Sezione Info utili -->
+        <section>
+            <h3>Info utili:</h3>
+            <ol>
+                <li>
+                    <span>Numeri utili di emergenza</span>
+                    <ul>
+                        <li><strong>999</strong> - Emergenza</li>
+                        <li><strong>101</strong> - Numero polizia</li>
+                        <li><strong>111</strong> - Numero assistenza medica</li>
+                    </ul>
+                </li>
+                <li>
+                    <span>Hotel</span>
+                    <ul>
+                        <li><strong>Nome Hotel</strong>: Buckingham Palace</li>
+                        <li><strong>Indirizzo hotel</strong>: Westminster, London SW1A 1AA, Regno Unito</li>
+                    </ul>
+                </li>
+                <li>
+                    <span>Aereo</span>
+                    <ul>
+                        <li><strong>Volo di Andata</strong>: Y1234X, ore 9.30 da Milano Malpensa</li>
+                        <li><strong>Volo di Ritorno</strong>: Y1234X, ore 18.30 dal London Heathrow</li>
+                    </ul>
+                </li>
+            </ol>
+            <hr>
+        </section>
     </main>
 
 </body>
